fix: improve form width on smaller devices

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -9,7 +9,7 @@
   background-color: #fff;
   color: #000;
   border-radius: 10px;
-  width: 60%;
+  width: calc((100vw * 0.75) - 60px);
 }
 
 @media (min-width: 768px) {
